# boswell-test

./: .gitignore  HACKER_NEWS_POST.txt  LetterGrade.py  MANIFEST.in  MODULAR_README.md  PHASE2_SUMMARY.md  README.md  README_verification_plan.md  REFACTORING_NOTES.md  advanced_grade_extraction.py  analyze_na_handling.py  boswell_quotient_refactor_plan.md  boswell_quotient_visuals.md  boswell_test.py  cache_manager.py  check_composite_values.py  command_reference.md  create_cross_grading_table.py  create_domain.py  documentation_alignment_plan.md  documentation_update_plan.md  documentation_update_summary.md  example-output.txt  full-run-all-models-output.txt  generate_summary_report.py  larger_test_results.json  list_resources.py  main.py  na_grade_analysis.md  pyproject.toml  raw_flag_implementation_plan.md  requirements.txt  run_cli_tests.py  run_simple_test.py  setup.py  simple_test_results.json  test_boswell.py  test_composite_extraction_verbose.py  test_improved_grading.py  three_tier_extraction_system.md  (+1 more)
archive/: boswell_test.py
botwell/: __init__.py  __main__.py  cli.py
docs/: CHANGELOG.md  README.md  command_reference.md  composite_grades_implementation_plan.md  cross_grading_table.md  grading.md  model_name_abbreviation.md  model_name_standardization.md  peter-medians.md  project_restructuring_plan_TODO.md  ref.md  release_steps.md  restructuring_next_steps.md
domains/: comp_sci_2.py  humanities_1.py  programming_1.py
tests/: test_cli_basic.py  test_cli_commands.py  test_cli_commands_mock.py  test_cli_core.py  test_composite_extraction.py  test_dir.py  (+5 more)
(+1162 files in other folders)
