[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botwell"
version = "1.2.0"
description = "Boswell Test - LLM Comparative Analysis Tool"
readme = "README.md"
authors = [
    {name = "Referential", email = "info@referential.ai"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.56.0",
    "idna==3.10",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.0",
    "numpy==2.2.3",
    "packaging==24.2",
    "pillow==11.1.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "pandas",
    "openpyxl==3.1.5",  # For Excel cross-assessment table generation
    "six==1.17.0",
    "urllib3==2.3.0",
]

[project.urls]
repository = "https://github.com/referential-ai/boswell-test"

[project.scripts]
botwell = "botwell.cli:main"